src/main/java/com/ibm/si/jaql/aql/AQLParser.java
// Generated from AQL.g4 by ANTLR 4.1
package com.ibm.si.jaql.aql;
import java.util.ArrayList;
import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNSimulator;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AQLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ISNULL=1, NOTNULL=2, AND=3, OR=4, NOT=5, BETWEEN=6, LIKE=7, ILIKE=8, REGEX=9, 
		IREGEX=10, LIMIT=11, GROUP_BY=12, HAVING=13, ORDER_BY=14, FROM=15, WHERE=16, 
		ASC=17, DESC=18, COLLATE=19, INTO=20, IN=21, START=22, STOP=23, LAST=24, 
		MINUTES=25, HOURS=26, DAYS=27, ALL=28, AS=29, FTS=30, COUNT=31, FIRST=32, 
		SUM=33, AVG=34, MIN=35, MAX=36, UCOUNT=37, SELECT=38, SORTCURSOR=39, GETCURSOR=40, 
		REMOVECURSOR=41, DESCRIBE=42, PARAMETERS=43, TIMEINTERVAL=44, IntegerLiteral=45, 
		FloatingPointLiteral=46, Identifier=47, FunctionName=48, NullLiteral=49, 
		BooleanLiteral=50, StringLiteral=51, ASTERISK=52, Add=53, Subtract=54, 
		Multiply=55, Divide=56, Modulo=57, IDENTIFIER=58, EQ=59, NEQ=60, LT=61, 
		LE=62, GT=63, GE=64, QUOTE=65, SEMI=66, COLON=67, DOT=68, COMMA=69, RPAREN=70, 
		LPAREN=71, RBRACK=72, LBRACK=73, PLUS=74, MINUS=75, NEGATION=76, VERTBAR=77, 
		BITAND=78, POWER_OP=79, SLASH=80, WS=81, COMMENT=82, LINE_COMMENT=83;
	public static final String[] tokenNames = {
		"<INVALID>", "ISNULL", "NOTNULL", "AND", "OR", "NOT", "BETWEEN", "LIKE", 
		"ILIKE", "REGEX", "IREGEX", "LIMIT", "GROUP_BY", "HAVING", "ORDER_BY", 
		"FROM", "WHERE", "ASC", "DESC", "COLLATE", "INTO", "IN", "START", "STOP", 
		"LAST", "MINUTES", "HOURS", "DAYS", "ALL", "AS", "FTS", "COUNT", "FIRST", 
		"SUM", "AVG", "MIN", "MAX", "UCOUNT", "SELECT", "SORTCURSOR", "GETCURSOR", 
		"REMOVECURSOR", "DESCRIBE", "PARAMETERS", "TIMEINTERVAL", "IntegerLiteral", 
		"FloatingPointLiteral", "Identifier", "FunctionName", "NullLiteral", "BooleanLiteral", 
		"StringLiteral", "'*'", "Add", "Subtract", "Multiply", "Divide", "'%'", 
		"IDENTIFIER", "EQ", "NEQ", "'<'", "'<='", "'>'", "'>='", "'''", "';'", 
		"':'", "'.'", "','", "')'", "'('", "']'", "'['", "'+'", "'-'", "'~'", 
		"'|'", "'&'", "'^'", "'/'", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_criteria = 0, RULE_filter = 1, RULE_statement = 2, RULE_query = 3, 
		RULE_scalarSubquery = 4, RULE_queryTime = 5, RULE_queryParams = 6, RULE_parameter = 7, 
		RULE_database = 8, RULE_displayList = 9, RULE_displayColumn = 10, RULE_whereClause = 11, 
		RULE_orderBy = 12, RULE_subquery = 13, RULE_groupBy = 14, RULE_booleanExpression = 15, 
		RULE_booleanOperator = 16, RULE_comparisonOperator = 17, RULE_betweenOperator = 18, 
		RULE_likeOperator = 19, RULE_nullOperator = 20, RULE_inOperator = 21, 
		RULE_expressionList = 22, RULE_expression = 23, RULE_arithmeticOperator = 24, 
		RULE_column = 25, RULE_scalarFunction = 26, RULE_arguments = 27, RULE_aggregateFunction = 28, 
		RULE_literal = 29;
	public static final String[] ruleNames = {
		"criteria", "filter", "statement", "query", "scalarSubquery", "queryTime", 
		"queryParams", "parameter", "database", "displayList", "displayColumn", 
		"whereClause", "orderBy", "subquery", "groupBy", "booleanExpression", 
		"booleanOperator", "comparisonOperator", "betweenOperator", "likeOperator", 
		"nullOperator", "inOperator", "expressionList", "expression", "arithmeticOperator", 
		"column", "scalarFunction", "arguments", "aggregateFunction", "literal"
	};

	@Override
	public String getGrammarFileName() { return "AQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public AQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CriteriaContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(AQLParser.AND, 0); }
		public TerminalNode SEMI() { return getToken(AQLParser.SEMI, 0); }
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public TerminalNode StringLiteral() { return getToken(AQLParser.StringLiteral, 0); }
		public TerminalNode FTS() { return getToken(AQLParser.FTS, 0); }
		public CriteriaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criteria; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).enterCriteria(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).exitCriteria(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLVisitor ) return ((AQLVisitor<? extends T>)visitor).visitCriteria(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CriteriaContext criteria() throws RecognitionException {
		CriteriaContext _localctx = new CriteriaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_criteria);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(60); match(FTS);
				setState(61); match(StringLiteral);
				}
				break;

			case 2:
				{
				setState(65);
				_la = _input.LA(1);
				if (_la==FTS) {
					{
					setState(62); match(FTS);
					setState(63); match(StringLiteral);
					setState(64); match(AND);
					}
				}

				setState(67); booleanExpression(0);
				}
				break;
			}
			setState(71);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(70); match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(AQLParser.AND, 0); }
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public FilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).enterFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).exitFilter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLVisitor ) return ((AQLVisitor<? extends T>)visitor).visitFilter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterContext filter() throws RecognitionException {
		FilterContext _localctx = new FilterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_filter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if (_la==AND) {
				{
				setState(73); match(AND);
				}
			}

			setState(76); booleanExpression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(AQLParser.SEMI, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLVisitor ) return ((AQLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(78); query();
			}
			setState(80);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(79); match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public DatabaseContext database;
		public List<DatabaseContext> databases = new ArrayList<DatabaseContext>();
		public Token cursorName;
		public Token limit;
		public TerminalNode LIMIT() { return getToken(AQLParser.LIMIT, 0); }
		public OrderByContext orderBy() {
			return getRuleContext(OrderByContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public TerminalNode INTO() { return getToken(AQLParser.INTO, 0); }
		public TerminalNode Identifier() { return getToken(AQLParser.Identifier, 0); }
		public DisplayListContext displayList() {
			return getRuleContext(DisplayListContext.class,0);
		}
		public QueryTimeContext queryTime() {
			return getRuleContext(QueryTimeContext.class,0);
		}
		public TerminalNode SELECT() { return getToken(AQLParser.SELECT, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(AQLParser.COMMA, i);
		}
		public List<DatabaseContext> database() {
			return getRuleContexts(DatabaseContext.class);
		}
		public QueryParamsContext queryParams() {
			return getRuleContext(QueryParamsContext.class,0);
		}
		public DatabaseContext database(int i) {
			return getRuleContext(DatabaseContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AQLParser.COMMA); }
		public TerminalNode IntegerLiteral() { return getToken(AQLParser.IntegerLiteral, 0); }
		public GroupByContext groupBy() {
			return getRuleContext(GroupByContext.class,0);
		}
		public TerminalNode FROM() { return getToken(AQLParser.FROM, 0); }
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLVisitor ) return ((AQLVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); match(SELECT);
			setState(83); displayList();
			setState(84); match(FROM);
			setState(85); ((QueryContext)_localctx).database = database();
			((QueryContext)_localctx).databases.add(((QueryContext)_localctx).database);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(86); match(COMMA);
				setState(87); ((QueryContext)_localctx).database = database();
				((QueryContext)_localctx).databases.add(((QueryContext)_localctx).database);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			_la = _input.LA(1);
			if (_la==INTO) {
				{
				setState(93); match(INTO);
				setState(94); ((QueryContext)_localctx).cursorName = match(Identifier);
				}
			}

			setState(98);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(97); whereClause();
				}
			}

			setState(101);
			_la = _input.LA(1);
			if (_la==GROUP_BY) {
				{
				setState(100); groupBy();
				}
			}

			setState(104);
			_la = _input.LA(1);
			if (_la==ORDER_BY) {
				{
				setState(103); orderBy();
				}
			}

			setState(108);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(106); match(LIMIT);
				setState(107); ((QueryContext)_localctx).limit = match(IntegerLiteral);
				}
			}

			setState(111);
			_la = _input.LA(1);
			if (_la==START || _la==LAST) {
				{
				setState(110); queryTime();
				}
			}

			setState(114);
			_la = _input.LA(1);
			if (_la==PARAMETERS) {
				{
				setState(113); queryParams();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScalarSubqueryContext extends ParserRuleContext {
		public DisplayColumnContext displayColumn;
		public List<DisplayColumnContext> columns = new ArrayList<DisplayColumnContext>();
		public DatabaseContext database;
		public List<DatabaseContext> databases = new ArrayList<DatabaseContext>();
		public Token limit;
		public List<DatabaseContext> database() {
			return getRuleContexts(DatabaseContext.class);
		}
		public QueryParamsContext queryParams() {
			return getRuleContext(QueryParamsContext.class,0);
		}
		public TerminalNode LIMIT() { return getToken(AQLParser.LIMIT, 0); }
		public DatabaseContext database(int i) {
			return getRuleContext(DatabaseContext.class,i);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(AQLParser.COMMA); }
		public TerminalNode IntegerLiteral() { return getToken(AQLParser.IntegerLiteral, 0); }
		public GroupByContext groupBy() {
			return getRuleContext(GroupByContext.class,0);
		}
		public QueryTimeContext queryTime() {
			return getRuleContext(QueryTimeContext.class,0);
		}
		public TerminalNode SELECT() { return getToken(AQLParser.SELECT, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(AQLParser.COMMA, i);
		}
		public DisplayColumnContext displayColumn() {
			return getRuleContext(DisplayColumnContext.class,0);
		}
		public TerminalNode FROM() { return getToken(AQLParser.FROM, 0); }
		public ScalarSubqueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scalarSubquery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).enterScalarSubquery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).exitScalarSubquery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLVisitor ) return ((AQLVisitor<? extends T>)visitor).visitScalarSubquery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScalarSubqueryContext scalarSubquery() throws RecognitionException {
		ScalarSubqueryContext _localctx = new ScalarSubqueryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scalarSubquery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(SELECT);
			setState(117); ((ScalarSubqueryContext)_localctx).displayColumn = displayColumn();
			((ScalarSubqueryContext)_localctx).columns.add(((ScalarSubqueryContext)_localctx).displayColumn);
			setState(118); match(FROM);
			setState(119); ((ScalarSubqueryContext)_localctx).database = database();
			((ScalarSubqueryContext)_localctx).databases.add(((ScalarSubqueryContext)_localctx).database);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(120); match(COMMA);
				setState(121); ((ScalarSubqueryContext)_localctx).database = database();
				((ScalarSubqueryContext)_localctx).databases.add(((ScalarSubqueryContext)_localctx).database);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(127); whereClause();
				}
			}

			setState(131);
			_la = _input.LA(1);
			if (_la==GROUP_BY) {
				{
				setState(130); groupBy();
				}
			}

			setState(135);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(133); match(LIMIT);
				setState(134); ((ScalarSubqueryContext)_localctx).limit = match(IntegerLiteral);
				}
			}

			setState(138);
			_la = _input.LA(1);
			if (_la==START || _la==LAST) {
				{
				setState(137); queryTime();
				}
			}

			setState(141);
			_la = _input.LA(1);
			if (_la==PARAMETERS) {
				{
				setState(140); queryParams();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryTimeContext extends ParserRuleContext {
		public Token startTime;
		public Token stopTime;
		public Token minutes;
		public TerminalNode STOP() { return getToken(AQLParser.STOP, 0); }
		public TerminalNode START() { return getToken(AQLParser.START, 0); }
		public TerminalNode MINUTES() { return getToken(AQLParser.MINUTES, 0); }
		public TerminalNode IntegerLiteral() { return getToken(AQLParser.IntegerLiteral, 0); }
		public TerminalNode HOURS() { return getToken(AQLParser.HOURS, 0); }
		public List<TerminalNode> StringLiteral() { return getTokens(AQLParser.StringLiteral); }
		public TerminalNode DAYS() { return getToken(AQLParser.DAYS, 0); }
		public TerminalNode LAST() { return getToken(AQLParser.LAST, 0); }
		public TerminalNode StringLiteral(int i) {
			return getToken(AQLParser.StringLiteral, i);
		}
		public QueryTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryTime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).enterQueryTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).exitQueryTime(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLVisitor ) return ((AQLVisitor<? extends T>)visitor).visitQueryTime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryTimeContext queryTime() throws RecognitionException {
		QueryTimeContext _localctx = new QueryTimeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_queryTime);
		int _la;
		try {
			setState(152);
			switch (_input.LA(1)) {
			case START:
				enterOuterAlt(_localctx, 1);
				{
				setState(143); match(START);
				setState(144); ((QueryTimeContext)_localctx).startTime = match(StringLiteral);
				setState(147);
				_la = _input.LA(1);
				if (_la==STOP) {
					{
					setState(145); match(STOP);
					setState(146); ((QueryTimeContext)_localctx).stopTime = match(StringLiteral);
					}
				}

				}
				break;
			case LAST:
				enterOuterAlt(_localctx, 2);
				{
				setState(149); match(LAST);
				setState(150); ((QueryTimeContext)_localctx).minutes = match(IntegerLiteral);
				setState(151);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUTES) | (1L << HOURS) | (1L << DAYS))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryParamsContext extends ParserRuleContext {
		public ParameterContext parameter;
		public List<ParameterContext> params = new ArrayList<ParameterContext>();
		public List<TerminalNode> COMMA() { return getTokens(AQLParser.COMMA); }
		public TerminalNode PARAMETERS() { return getToken(AQLParser.PARAMETERS, 0); }
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(AQLParser.COMMA, i);
		}
		public QueryParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryParams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).enterQueryParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLListener ) ((AQLListener)listener).exitQueryParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLVisitor ) return ((AQLVisitor<? extends T>)visitor).visitQueryParams(this);
			else return visitor.visitChildren(this);
		}
	}
